# YouAndOrchestra

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  FEATURE_STATUS.md  LICENSE  Makefile  PROJECT.md  README.md  VISION.md  mkdocs.yml  pyproject.toml  user_style_profile.json
.claude/agents/: _protocol.md  adversarial-critic.md  composer.md  conversation-director.md  harmony-theorist.md  mix-engineer.md  orchestrator.md  producer.md  rhythm-architect.md  spec-compiler.md
.claude/commands/: arrange.md  compose.md  conduct.md  critique.md  explain.md  feedback.md  pin.md  regenerate-section.md  render.md  sketch.md
.claude/guides/: architecture.md  coding-conventions.md  cookbook.md  matrix-discipline.md  music-engineering.md  neural.md  testing.md  workflow.md
.claude/hooks/: post-generate-critique.sh  post-generate-render.sh  pre-commit-lint.sh  update-provenance.sh
.github/workflows/: audio-regression.yml  ci.yml  docs.yml
custom_instruments/: koto.yaml  ney.yaml  oud.yaml  shakuhachi.yaml  shamisen.yaml  sitar.yaml  tabla.yaml  taiko.yaml
development/: CONTRIBUTING.md  README.md  api-reference.md  architecture.md  generator-guide.md  roadmap.md  spec-system.md  testing-strategy.md
docs/: gallery.md  glossary.md  index.md  provenance-schema.md  wave-1-2-comparison.md  wave-1-3-japanese-quality.md  wave-2-1-skill-demo.md  wave-2-2-aesthetic-benchmark.md  wave-2-3-audio-demo.md  wave-3-5-rating-collection.md  wave-3-6-dialogue-samples.md
docs/architecture/: decisions.md  layers.md
docs/audit/: 2026-05-monthly.md  2026-05-status-reaudit.md  baseline-violations.md  wave-1-completion.md  wave-2-completion.md
docs/design/: 0001-genre-skill-template.md  0001-layer-architecture.md  0002-tonal-system.md  0003-sound-design.md  0004-reference-evaluation.md  0005-subagent-protocol.md  0006-phase-protocol.md  0007-loop-generator.md  0008-vocal-track.md  v2-summary.md  wave-1-1-composer.md  wave-1-2-anthropic-api.md  wave-1-4-golden-diff.md  wave-1-4-note-realizer-v2.md  wave-2-2-aesthetic-metrics.md  wave-3-2-ensemble-constraints.md
docs/getting-started/: audio-setup.md  quickstart.md  templates.md
docs/guide/: cli-reference.md  composition-spec.md  constraints.md  trajectories.md
docs/guides/: feature-status-discipline.md  matrix-discipline.md
docs/migration/: silent-fallback-inventory.md  v1.1-baseline-report.md  v2-baseline-report.md  v2-document-transition.md  v2-functional-improvement-plan.md  v2-gap-closure-plan.md  v2-improvement-plan.md  v2-progress.md
docs/reference/: glossary.md  instruments.md  music-theory.md  provenance-schema.md
docs/tutorials/: claude-code-workflow.md
drum_patterns/: ballad_brushed.yaml  bartok_7_8.yaml  bulgarian_7_8.yaml  chiptune.yaml  compound_6_8.yaml  four_on_the_floor.yaml  game_drive_16bit.yaml  jazz_swing_ride.yaml  lofi_laidback.yaml  orchestral.yaml  pop_8beat.yaml  rock_backbeat.yaml  take_five_5_4.yaml  trap_half_time.yaml  waltz_3_4.yaml
gallery/: README.md  bgm-90sec-stochastic.mid  minimal-piano-stochastic.mid
gallery/puzzle-light/: composition.yaml  intent.md  (+1 more)
genre_profiles/: acoustic_folk.yaml  ambient.yaml  cinematic.yaml  game_8bit_chiptune.yaml  j_pop.yaml  jazz_ballad.yaml  lofi_hiphop.yaml  neoclassical.yaml
grooves/: afrobeat.yaml  ambient_fluid.yaml  bollywood_filmi.yaml  bossa_nova.yaml  cinematic_legato.yaml  drum_n_bass.yaml  edm_4onfloor.yaml  flamenco_bulerias.yaml  funk_16th.yaml  j_pop_tight.yaml  jazz_swing.yaml  lofi_hiphop.yaml  new_orleans_second_line.yaml  pop_straight.yaml  reggae_one_drop.yaml  rock_backbeat.yaml  samba.yaml  shuffle_blues.yaml  trap_double_time.yaml  waltz_viennese.yaml
references/: catalog.yaml
soundfonts/: README.md
tests/: conftest.py  helpers.py
tools/: architecture_lint.py  calibrate_genres.py  capability_matrix_check.py  capability_matrix_mapping.yaml  check_backend_honesty.py  check_critic_coverage.py  check_plan_consumption.py  check_silent_fallback.py  check_skill_grounding.py  extract_features.py  feature_status_check.py  feature_status_mapping.yaml  honesty_check.py  meter_assumption_lint.py  migrate_spec_v1_to_v2.py  setup_references.py  skill_yaml_sync.py  sync_docs.py  validate_references.py
(+587 files in other folders)
